# libdhgst

./: .gitignore  CMakeLists.txt  Doxyfile.in  README.md  libdhgst.pc.in  libdhgstConfig.cmake.in
.github/workflows/: ci.yml  docs.yml
examples/: CMakeLists.txt  linkPipelineElements.cpp  pipelineFromDesc.cpp
src/: bin.cpp  bin.hpp  bus.cpp  bus.hpp  dhgst.hpp  element.cpp  element.hpp  elementfactory.cpp  elementfactory.hpp  gilmappedviewinterleaved.hpp  gilview.hpp  helpers.cpp  helpers.hpp  messageparser.cpp  messageparser.hpp  object.cpp  object.hpp  objecttraits.hpp  pipeline.cpp  pipeline.hpp  pluginfeature.cpp  pluginfeature.hpp  sharedptrs.hpp  transfertype.hpp  typetraits.hpp
tests/: CMakeLists.txt  gtest_bin.cpp  gtest_bus.cpp  gtest_element.cpp  gtest_elementfactory.cpp  gtest_gilmappedviewinterleaved.cpp  gtest_gilview.cpp  gtest_helpers.cpp  gtest_messageparser.cpp  gtest_object-signals.cpp  gtest_pipeline.cpp  gtest_sharedptrs.cpp  test_bin.cpp  test_bus.cpp  test_element.cpp  test_elementfactory.cpp  test_gilview.cpp  test_helpers.cpp  test_messageparser.cpp  test_object-signals.cpp  test_pipeline.cpp  test_sharedptrs.cpp
